[package]
name = "gputop"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/BossCurryman/gputop"
readme = "README.md"
descrition = """
Like top but for the gpu(s) specifically.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.25.0"